%%{init: {'theme':'base', 'themeVariables': {'primaryColor':'#f2f2f2','primaryTextColor':'#1a1a1a','primaryBorderColor':'#2c2c2c','lineColor':'#2c2c2c','fontFamily':'Arial, Helvetica, sans-serif','fontSize':'14px'}}}%%
erDiagram
    DEPORTISTA {
        string documento PK
        string nombre
        date fecha_nacimiento
        float estatura
        float peso
        string categoria "PROPUESTA: calculada, no almacenada — depende de la tabla oficial de categorias (RN-1.3, RN-3.8)"
        int edad "PROPUESTA: calculada, no almacenada, desde fecha_nacimiento (RN-1.3)"
        string discapacidad "editable tambien en vista publica (RN-1.5)"
        string estado_animico "CONFIRMADO en BD, no visible en interfaz (RN-2.4) — reserva a futuro"
        string sede_entrenamiento "NUEVO v2 — CONFIRMADO: Club Hwang Hon / Escuela IMRDS (RN-T.8), dato adicional, no activa gestion de escuelas"
        boolean autorizacion_datos "NUEVO v2 — CONFIRMADO: checkbox si el registro es virtual; ya cubierta por firma fisica si es presencial (RN-1.8/RN-T.9)"
        string grado_actual "NUEVO v2 — PROPUESTA: cinturon vigente, necesario para la ficha consolidada (RN-10.3); se actualiza al aprobar un examen (Detalle_Evaluacion) o se registra un valor inicial si ingresa con grado de otro club"
        date fecha_ingreso
        string estado "activo / inactivo"
        string estado_registro "pendiente_validacion / validado — solo autorregistrados"
        string acudiente_documento FK "nulo si el deportista es mayor de edad"
        string validado_por_correo FK "auditoria de autorregistro — nulo si no aplica"
    }

    ACUDIENTE_TUTOR {
        string documento PK
        string nombre
        string relacion
    }

    USUARIO_ADMINISTRATIVO {
        string correo PK
        string contrasena
        string nombre
        string rol "NUEVO v2 — PROPUESTA (opcional): Aldrin / Tesorero / Contador / Secretaria, solo identificacion, sin efecto en permisos (RN-T.2)"
        boolean es_administrador_principal "true solo para Aldrin"
        string creado_por_correo FK "reflexiva — nulo para la cuenta fundadora"
    }

    DOCUMENTO {
        int id PK
        string deportista_documento FK
        string tipo_documento "inscripcion / identidad / acudiente / foto / consentimiento / certificado_ascenso / competencia / otro (RN-6.1)"
        string archivo
        date fecha_carga
        string estado "cargado / pendiente"
    }

    ASISTENCIA {
        string deportista_documento PK "tambien FK a Deportista"
        date fecha PK
        boolean asistio
    }

    PAGO {
        int id PK
        string deportista_documento FK
        string tipo "mensualidad / matricula"
        int anio "NUEVO v2 — PROPUESTA: separa la granularidad que en v1 mezclaba un solo campo periodo (RN-8.1/RN-8.2)"
        int mes "aplica solo a mensualidad, 1-12"
        int semana "aplica solo a mensualidad, 1-4 (RN-8.1) — semana del mes en que se realizo el pago"
        string estado "pagado / pendiente"
        string consecuencia_mora "PENDIENTE DE ALDRIN: consecuencia tras mora prolongada (RN-8.7)"
    }

    EVENTO_CALENDARIO {
        int id PK
        string nombre "NUEVO v2 — CONFIRMADO: nombre o descripcion del evento (RN-3.1/RN-9.4)"
        string tipo "competencia / evaluacion / reunion_administrativa / evento_extra"
        date fecha
        string lugar
        string visibilidad "administrativa / publica"
        string observaciones "NUEVO v2 — CONFIRMADO: notas generales del evento, a nivel de torneo — distinto de notas_oponente (RN-3.1)"
    }

    COMPETENCIA {
        int evento_id PK "tambien FK a Evento_Calendario — 1 a 1 cuando tipo = competencia"
        string plataforma "NUEVO v2 — CONFIRMADO: Fitofan u otra, texto libre, sin integracion (RN-3.4)"
        string tipo_torneo "NUEVO v2 — CONFIRMADO: nacional / internacional / departamental (RN-3.3)"
    }

    PARTICIPACION_COMPETENCIA {
        string deportista_documento PK "tambien FK a Deportista"
        int competencia_evento_id PK "tambien FK a Competencia"
        string modalidad "CONFIRMADO (RN-3.1/RN-3.2): un torneo agrupa varias modalidades, cada participacion especifica una — 6 modalidades posibles"
        string categoria_edad "TRASLADADO v2 desde Competencia — CONFIRMADO: Infantil 8-11, Junior 12-14, Juvenil 15-17, Mayores 18-35, Senior 36-45, Master 46+ (RN-3.1/RN-3.8). Es un dato de la PARTICIPACION, no del torneo: un mismo torneo agrupa varias categorias a la vez, y la categoria del deportista puede variar con el tiempo — este campo guarda el valor historico vigente en esa participacion"
        string categoria_peso "TRASLADADO v2 desde Competencia — PENDIENTE DE VALIDACION: pesos por edad para categorias menores, consultado con Viviana (RN-3.1/RN-3.8)"
        string resultado "resultado general / medalleria, texto libre (RN-3.1)"
        string medalla "NUEVO v2 — PROPUESTA: oro / plata / bronce / ninguna — estructurado para poder graficar evolucion (RN-2.3, RN-3.3)"
        int combates_ganados "NUEVO v2 — PROPUESTA: aplica a modalidades de combate (RN-3.1)"
        int combates_perdidos "NUEVO v2 — PROPUESTA: aplica a modalidades de combate (RN-3.1)"
        string notas_oponente "texto libre, uso interno del staff"
    }

    SESION_EXAMEN {
        int id PK
        date fecha "CONFIRMADO: 26 abr, 26 jul, 13 dic 2026 — verificado en Plan de Accion IMRDS (RN-5.4)"
        string lugar
    }

    DETALLE_EVALUACION {
        int sesion_examen_id PK "tambien FK a Sesion_Examen"
        string deportista_documento PK "tambien FK a Deportista"
        string modalidad PK "teorico / fisico / combate / rompimiento / formas / llaves"
        string grado_evaluado "NUEVO v2 — CONFIRMADO: grado/cinturon al que aspira el deportista en este examen (RN-5.1)"
        string estado "pendiente / completado"
        date fecha_completado "cada modalidad puede completarse en fecha distinta al resto del grupo (RN-5.5)"
        string criterios_evaluados "NUEVO v2, reemplaza el campo unico resultado de v1 — PENDIENTE DE ALDRIN: estructura confirmada por RN-5.1, valores desde la plantilla oficial. Si la plantilla resulta tener multiples criterios con puntaje propio, este campo debe evolucionar a una entidad hija (p. ej. CRITERIO_EVALUACION 1 a N) en vez de repetirlos aqui — no se construye esa entidad todavia para no sobre-disenar sin la plantilla real"
        string puntajes "NUEVO v2 — PENDIENTE DE ALDRIN: estructura confirmada por RN-5.1, escala desde la plantilla oficial"
        float valor_medible "NUEVO v2 — PROPUESTA: valor numerico de prueba fisica (ej. repeticiones/minuto), para graficar evolucion (RN-2.3) — aplica cuando modalidad = fisico"
        string aspectos_fallidos "NUEVO v2 — PENDIENTE DE ALDRIN: estructura confirmada por RN-5.1"
        string observaciones "NUEVO v2 — PENDIENTE DE ALDRIN: estructura confirmada por RN-5.1"
        string recomendaciones "NUEVO v2 — PENDIENTE DE ALDRIN: estructura confirmada por RN-5.1"
        boolean aprobado "si / no — tiempos minimos entre ascensos: consultado con Viviana y Aldrin (RN-2.5). Si es si, actualiza Deportista.grado_actual al valor de grado_evaluado"
    }

    LEYENDA_NOTACION {
        string entidad_nucleo "Borde rojo grueso solido = entidad confirmada (Reglas de Negocio v0.3)"
        string entidad_asociativa "Borde gris fino solido = entidad de relacion N a N (tabla asociativa)"
        string dato_pendiente "Comentario PROPUESTA o PENDIENTE DE ALDRIN/VERIFICACION/VALIDACION junto al atributo = dato o regla aun no confirmada; no construir como definitivo"
        string cambio_v2 "Comentario NUEVO v2 o TRASLADADO v2 = agregado o movido en la revision de normalizacion y completitud del 24/09/2026, frente al MER v1"
    }

    ACUDIENTE_TUTOR ||--o{ DEPORTISTA : "es responsable de"
    USUARIO_ADMINISTRATIVO ||--o{ DEPORTISTA : "valida (registro pendiente)"
    USUARIO_ADMINISTRATIVO ||--o{ USUARIO_ADMINISTRATIVO : "da de alta / gestiona"
    DEPORTISTA ||--o{ DOCUMENTO : "tiene"
    DEPORTISTA ||--o{ ASISTENCIA : "registra"
    DEPORTISTA ||--o{ PAGO : "realiza"
    EVENTO_CALENDARIO ||--o| COMPETENCIA : "se especializa en"
    DEPORTISTA ||--o{ PARTICIPACION_COMPETENCIA : "participa en"
    COMPETENCIA ||--o{ PARTICIPACION_COMPETENCIA : "recibe"
    DEPORTISTA ||--o{ DETALLE_EVALUACION : "es evaluado en"
    SESION_EXAMEN ||--o{ DETALLE_EVALUACION : "agrupa"

    DEPORTISTA:::confirmado
    ACUDIENTE_TUTOR:::confirmado
    USUARIO_ADMINISTRATIVO:::confirmado
    DOCUMENTO:::confirmado
    ASISTENCIA:::confirmado
    PAGO:::confirmado
    EVENTO_CALENDARIO:::confirmado
    COMPETENCIA:::confirmado
    SESION_EXAMEN:::confirmado
    PARTICIPACION_COMPETENCIA:::asociativa
    DETALLE_EVALUACION:::asociativa
    LEYENDA_NOTACION:::leyenda

    classDef confirmado fill:#f2f2f2,stroke:#8b1e1e,stroke-width:3px
    classDef asociativa fill:#ffffff,stroke:#2c2c2c,stroke-width:1px
    classDef leyenda fill:#fbf6ea,stroke:#b08d2a,stroke-width:2px,stroke-dasharray:5 4
